--- a/HW3/launch.json
+++ b/HW3/launch.json
@@ -1,8 +1,7 @@
 {
-    // IntelliSense를 사용하여 가능한 특성에 대해 알아보세요.
-    // 기존 특성에 대한 설명을 보려면 가리킵니다.
-    // 자세한 내용을 보려면 https://go.microsoft.com/fwlink/?linkid=830387을(를) 방문하세요.
-    "version": "0.2.0",
+    // https://github.com/bearpaw/pytorch-classification 의 코드에 디버그 모드로 아래 커맨드 실행
+    // python cifar.py -a alexnet --epochs 164 --schedule 81 122 --gamma 0.1 --checkpoint checkpoints/cifar10/alexnet 
+    // 코드 임의의 중간에 브레이크 포인트 찍어서 멈춰라.
     "configurations": [
         {
             "name": "Python 디버거: 현재 파일",
